@@ -60,8 +60,22 @@ extern "C" gboolean on_shape_window_delete_event
 	return TRUE;
 	}
 
-	void open_shape_window(int shnum, int frnum, Shape_info *info = 0);
-	void close_shape_window();
+/*
+ *	Draw shape in draw area.
+ */
+extern "C" gboolean on_shinfo_draw_expose_event
+	(
+	GtkWidget *widget,		// The view window.
+	GdkEventExpose *event,
+	gpointer data			// ->Shape_chooser.
+	)
+	{
+	ExultStudio::get_instance()->show_shinfo_shape(
+		event->area.x, event->area.y, event->area.width,
+							event->area.height);
+	return (TRUE);
+	}
+
 /*
  *	Open the shape-editing window.
  */
@@ -69,25 +83,41 @@ extern "C" gboolean on_shape_window_delete_event
 void ExultStudio::open_shape_window
 	(
 	int shnum,			// Shape #.
-	int frmnum,			// Frame #.
+	int frnum,			// Frame #.
+	Vga_file *ifile,		// File it's in.
+	char *shname,			// ->shape name, or null.
 	Shape_info *info		// Info. if in main object shapes.
 	)
 	{
 	if (!shapewin)			// First time?
-		{
 		shapewin = glade_xml_get_widget( app_xml, "shape_window" );
-#if 0
-		if (vgafile && palbuf)
-			{
-			shape_draw = new Shape_draw(vgafile, palbuf,
-			    glade_xml_get_widget(app_xml, "shape_draw"));
-			shape_draw->enable_drop(Shape_shape_dropped, this);
-			}
-#endif
+	if (shape_draw)			// Ifile might have changed.
+		delete shape_draw;
+	shape_draw = 0;
+	if (ifile && palbuf)
+		{
+		shape_draw = new Shape_draw(ifile, palbuf,
+			    glade_xml_get_widget(app_xml, "shinfo_draw"));
+//		shape_draw->enable_drop(Shape_shape_dropped, this);
 		}
 					// Init. shape address to info.
 	gtk_object_set_user_data(GTK_OBJECT(shapewin), info);
+					// Shape/frame.
+	set_entry("shinfo_shape", shnum, false, false);
+	set_entry("shinfo_frame", frnum);
+					// Store name, #frames.
+	set_entry("shinfo_name", shname ? shname : "");
+	set_spin("shinfo_num_frames", ifile->get_num_frames(shnum));
+					// Show xright, ybelow.
+	Shape_frame *shape = ifile->get_shape(shnum, frnum);
+	set_spin("shinfo_originx", shape->get_xright());
+	set_spin("shinfo_originy", shape->get_ybelow());
+					// Get info. notebook.
+	GtkWidget *notebook = glade_xml_get_widget(app_xml, "shinfo_notebook");
+	gtk_widget_set_sensitive(notebook, info != 0);
+	//+++++++Fill in notebook.
 	gtk_widget_show(shapewin);
+	show_shinfo_shape();		// Be sure picture is updated.
 	}
 
 /*
@@ -100,5 +130,29 @@ void ExultStudio::close_shape_window
 	{
 	if (shapewin)
 		gtk_widget_hide(shapewin);
+	}
+
+/*
+ *	Paint the shape in the draw area.
+ */
+
+void ExultStudio::show_shinfo_shape
+	(
+	int x, int y, int w, int h	// Rectangle. w=-1 to show all.
+	)
+	{
+	if (!shape_draw)
+		return;
+	shape_draw->configure();
+					// Yes, this is kind of redundant...
+	int shnum = get_num_entry("shinfo_shape");
+	int frnum = get_num_entry("shinfo_frame");
+	if (!shnum)			// Don't draw shape 0.
+		shnum = -1;
+	shape_draw->draw_shape_centered(shnum, frnum);
+	if (w != -1)
+		shape_draw->show(x, y, w, h);
+	else
+		shape_draw->show();
 	}
 
